# darktube-core

./: .gitignore  BUILD_COMMAD.md  CMakeLists.txt  README.md  SEARCH_BASE_MODEL.md  STREAM_RESPONSE.md  build_nro.sh
darktube/include/core/: theme.hpp
darktube/include/data/: ip_repository.hpp  network_client.hpp
darktube/include/domain/: models.hpp
darktube/include/presentation/: home_activity.hpp  player_activity.hpp  server_list_activity.hpp  ui_utils.hpp
darktube/include/view/: mpv_core.hpp
darktube/source/: main.cpp
darktube/source/data/: ip_repository.cpp  network_client.cpp
darktube/source/presentation/: home_activity.cpp  player_activity.cpp  server_list_activity.cpp
darktube/source/view/: mpv_core.cpp
resources/i18n/en-US/: main.json
resources/i18n/id-ID/: main.json
